--- a/src/Component/Inputcontainer/Inputcontainer.css
+++ b/src/Component/Inputcontainer/Inputcontainer.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital@1&display=swap');
+
 .inputContainer{
     height: 85%;
     width: 80%;
